Fix battle view making things move when not showing a Pokemon

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -333,6 +333,8 @@ img {
 }
 
 .battle-view {
+  height: 220px;
+
   color: whitesmoke;
 
   background-image: url(../assets/images/battleBackground/default.png);
